2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/legacycfg.c (legacy_file): Trim the line.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-menulst2cfg.c (main): Trim the line.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/init.c (grub_get_conv_memsize): Removed.
	(grub_machine_init): Don't check amount of low memory as reportedly
	INT 12h can be broken and if low memory is too low we wouldn't have
	gotten into grub_machine_init anyway.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/mmap.c (grub_get_conv_memsize): New function.
	(grub_machine_mmap_iterate): Take low memory into account

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_mount): Transform out of range into
	badfs.
	Reported by: TiCPU.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (insert_array): Display RAID name in duplicate
	members errors.

2011-01-09  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub.d/10_netbsd.in (netbsd_load_fs_module): New function.
	(netbsd_entry): Use netbsd_load_fs_module() to load filesystem module.

2011-01-09  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Handle
	openbsd and netbsd types being in part_bsd module.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* config.h.in (_LARGEFILE_SOURCE): Add missing define.
	(_FILE_OFFSET_BITS): Likewise.
	Reported by: Seth Goldberg.

2011-01-08  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Check for libdevmapper header.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (dmu_read): Use void * for some pointers to
	avoid aliasing.
	(fzap_lookup): Likewise.
	(dnode_get): Likewise.
	(make_mdn): Likewise.
	(zfs_mount): Likewise.
	(fzap_iterate): Use temporary pointer to avoid aliasing.
	(grub_zfs_read): Likewise.